--- a/HBPApi/appsettings.Development.json
+++ b/HBPApi/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HBPAuthData;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "HBPData": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HBPData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Secrets": {
+    "BlobContainer.Uri": ""
   }
 }
