Create Azure storage for images
Creates Azure storage for product images and adds necessary code for retrieving each product image., such as Models, endpoints, controllers and tables.

Adds temporary images with wwwroot folder to prevent constant reading from the Azure storage container (costing money)

--- a/HBPApi/appsettings.Development.json
+++ b/HBPApi/appsettings.Development.json
@@ -10,6 +10,6 @@
     }
   },
   "Secrets": {
-    "BlobContainer.Uri": ""
+    "BlobContainer.Uri": "https://hbpstorage3648.blob.core.windows.net/products/"
   }
 }
